[package]
name = "mls-delivery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
openmls = "0.5"
openmls_rust_crypto = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

# Lock to specific compatible versions
base64ct = "1.6"
chacha20poly1305 = "0.10.1"
